--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
   </head>
   <body>
     <header>
-      <header class="up_header">
+      <div class="up_header">
         <div class="container">
           <div class="site_options">
             <div class="logo">
-              <a href="#"><img src="img/logo.png" width="220" height="47" alt="Техномарт"></a>
+              <a><img src="img/logo.png" width="220" height="47" alt="Техномарт"></a>
             </div>
             <form action="https://echo.htmlacademy.ru" method="get">
               <input type="text" name="search" placeholder="Поиск">
@@ -20,8 +20,8 @@
             <a class="order" href="#">Оформить заказ</a>
           </div>
         </div>
-      </header>
-      <header class="bottom_header">
+      </div>
+      <div class="bottom_header">
         <div class="container">
           <div class="user_block">
             <div class="info">
@@ -43,13 +43,13 @@
           <nav class="header_nav">
             <ul>
               <li>
-                <a href="#">Главная</a>
+                <a>Главная</a>
               </li>
               <li>
                 <a href="#">Компания</a>
               </li>
               <li>
-                <a href="#">Каталог</a>
+                <a href="catalog.html">Каталог</a>
               </li>
               <li>
                 <a href="#">Новости</a>
@@ -66,7 +66,7 @@
             </ul>
           </nav>
         </div>
-      </header>
+      </div>
     </header>
     <main class="container">
       <section class="catalog">
@@ -90,7 +90,6 @@
           <h2>Доставка</h2>
           <a class="item_btn" href="#">БЕСПЛАТНО</a>
         </div>
-        <!-- Не понятно, как верстать слайдер - поэлементно или будет какое-то готовое решение -->
         <div class="catalog_slider">
           <div class="catalog_slider_content">
             <img src="img/photo-1.jpg" alt="" width="620" height="266" />
@@ -98,64 +97,74 @@
           <a class="main_btn" href="#">ОТКРЫТЬ КАТАЛОГ</a>
         </div>
       </section>
+      <section class="title">
+        <h2>ПОПУЛЯРНЫЕ ТОВАРЫ</h2>
+        <a class="main_btn" href="#">ВСЕ ПОПУЛЯРНЫЕ ТОВАРЫ</a>
+      </section>
       <section class="products">
         <div class="popular">
-          <h2>ПОПУЛЯРНЫЕ ТОВАРЫ</h2>
-          <a class="main_btn" href="#">ВСЕ ПОПУЛЯРНЫЕ ТОВАРЫ</a>
-          <a class="products_item" href="#">
-            <img src="img/prod_1.png" width="180" height="160" alt="" />
-            <h1>Перфоратор BOSCH BFG 9000</h1>
-            <span class="products_price">25500 Р</span>
-            <span class="products_old_price">32500 Р</span>
-          </a>
-          <a class="products_item" href="#">
-            <img src="img/prod_2.png" width="180" height="160" alt="" />
-            <h1>Перфоратор BOSCH BFG 3000</h1>
-            <span class="products_price">15500 Р</span>
-            <span class="products_old_price">22500 Р</span>
-          </a>
-          <a class="products_item" href="#">
-            <img src="img/prod_3.png" width="180" height="160" alt="" />
-            <h1>Перфоратор BOSCH BFG 6000</h1>
-            <span class="products_price">30500 Р</span>
-            <span class="products_old_price">25500 Р</span>
-          </a>
-          <a class="products_item" href="#">
-            <img src="img/prod_4.png" width="180" height="160" alt="" />
-            <h1>Перфоратор BOSCH BFG 2000</h1>
-            <span class="products_price">12500 Р</span>
-            <span class="products_old_price"></span>
-          </a>
+          <article class="products_item">
+            <a href="#">
+              <img src="img/prod_1.png" width="180" height="160" alt="" />
+              <h1>Перфоратор BOSCH BFG 9000</h1>
+              <span class="products_price">25500 Р</span>
+              <span class="products_old_price">32500 Р</span>
+            </a>
+          </article>
+          <article class="products_item">
+            <a href="#">
+              <img src="img/prod_2.png" width="180" height="160" alt="" />
+              <h1>Перфоратор BOSCH BFG 3000</h1>
+              <span class="products_price">15500 Р</span>
+              <span class="products_old_price">22500 Р</span>
+            </a>
+          </article>
+          <article class="products_item">
+            <a href="#">
+              <img src="img/prod_3.png" width="180" height="160" alt="" />
+              <h1>Перфоратор BOSCH BFG 6000</h1>
+              <span class="products_price">30500 Р</span>
+              <span class="products_old_price">25500 Р</span>
+            </a>
+          </article>
+          <article class="products_item">
+            <a href="#">
+              <img src="img/prod_4.png" width="180" height="160" alt="" />
+              <h1>Перфоратор BOSCH BFG 2000</h1>
+              <span class="products_price">12500 Р</span>
+            </a>
+          </article>
         </div>
+      </section>
+      <section class="title">
+        <h2>ПОПУЛЯРНЫЕ ПРОИЗВОДИТЕЛИ</h2>
+        <a class="main_btn" href="#">ВСЕ ПРОИЗВОДИТЕЛИ</a>
       </section>
       <section class="manufacters">
         <div class="popular">
-          <h2>ПОПУЛЯРНЫЕ ПРОИЗВОДИТЕЛИ</h2>
-          <a class="main_btn" href="#">ВСЕ ПРОИЗВОДИТЕЛИ</a>
           <a class="manufacters_item" href="#">
-            <!-- картинки все разные по размерам, задавать значит не нужно размеры? -->
-            <img src="img/mfc_1.png" alt="" />
+            <img src="img/mfc_1.png" alt="" width="200" height="73"/>
           </a>
           <a class="manufacters_item" href="#">
-            <img src="img/mfc_2.png" alt="" />
+            <img src="img/mfc_2.png" alt="" width="200" height="73"/>
           </a>
           <a class="manufacters_item" href="#">
-            <img src="img/mfc_3.png" alt="" />
+            <img src="img/mfc_3.png" alt="" width="200" height="73"/>
           </a>
           <a class="manufacters_item" href="#">
-            <img src="img/mfc_4.png" alt="" />
+            <img src="img/mfc_4.png" alt="" width="200" height="73"/>
           </a>
           <a class="manufacters_item" href="#">
-            <img src="img/mfc_5.png" alt="" />
+            <img src="img/mfc_5.png" alt="" width="200" height="73"/>
           </a>
           <a class="manufacters_item" href="#">
-            <img src="img/mfc_6.png" alt="" />
+            <img src="img/mfc_6.png" alt="" width="200" height="73"/>
           </a>
           <a class="manufacters_item" href="#">
-            <img src="img/mfc_7.png" alt="" />
+            <img src="img/mfc_7.png" alt="" width="200" height="73"/>
           </a>
           <a class="manufacters_item" href="#">
-            <img src="img/mfc_8.png" alt="" />
+            <img src="img/mfc_8.png" alt="" width="200" height="73"/>
           </a>
         </div>
       </section>
@@ -167,16 +176,6 @@
             Мы стараемся изо всех сил, чтобы сделать ваши покупки приятными.
           </p>
           <div class="services_slider">
-            <div class="services_slider_content">
-              <span class="services_name">ДОСТАВКА</span>
-              <p>
-                Мы с удовольствием доставим ваш товар прямо
-                к вашему подъезду совершенно бесплатно!
-                Ведь мы неплохо заработаем,
-                поднимая его на ваш этаж!
-              </p>
-              <img src="img/deliver.png" width="468" height="261" alt="" />
-            </div>
             <ul>
               <li>
                 <a class="services_btn" href="#">Доставка</a>
@@ -188,120 +187,147 @@
                 <a class="services_btn" href="#">Кредит</a>
               </li>
             </ul>
+            <div class="services_slider_content">
+              <span class="services_name">ДОСТАВКА</span>
+              <p>
+                Мы с удовольствием доставим ваш товар прямо
+                к вашему подъезду совершенно бесплатно!
+                Ведь мы неплохо заработаем,
+                поднимая его на ваш этаж!
+              </p>
+              <img src="img/deliver.png" width="468" height="261" alt="" />
+            </div>
+            <div class="services_slider_content">
+              <span class="services_name">ГАРАНТИЯ</span>
+              <p>
+                Если купленный у нас товар поломается или заискрит,
+                а также в случае пожара, спровоцированного его возгаранием,
+                вы всегда можете быть уверены в нашей гарантии. Мы обменяем сгоревший товар на новый.
+                Дом уж восстановите как-нибудь сами.
+              </p>
+              <img src="img/deliver.png" width="468" height="261" alt="" />
+            </div>
+            <div class="services_slider_content">
+              <span class="services_name">КРЕДИТ</span>
+              <p>
+                Залезть в долговую яму стало проще!
+                Кредитные консультанты придут вам на помощь.
+              </p>
+              <a class="main_btn" href="#">ОТПРАВИТЬ ЗАЯВКУ</a>
+              <img src="img/deliver.png" width="468" height="261" alt="" />
+            </div>
           </div>
         </div>
       </section>
       <section class="company">
-        <div class="main_block">
-          <div class="company_about">
-            <h2>КОМАНИЯ "ТЕХНОМАРТ"</h2>
-            <p>
-              Настоящий мужской шоппинг начинается здесь!
-              Огромный выбор товаров для ремонта и строительства не оставит равнодушными любителей сэкномить на гастарбайтерах.
-            </p>
-            <p>
-              Мы можем доставить ваш товар в самые отдаленные точки России!
-              Техномарт работает со многими транспортными компаниями:
-            </p>
-            <ul class="trans_companies">
-              <li>
-                Деловые линии
-              </li>
-              <li>
-                Автотрейдинг
-              </li>
-              <li>
-                ЖелДорЭкспедиция
-              </li>
-            </ul>
-            <a class="main_btn" href="#">Подробнее о компании</a>
-          </div>
+        <div class="company_about">
+          <h2>КОМАНИЯ "ТЕХНОМАРТ"</h2>
+          <p>
+            Настоящий мужской шоппинг начинается здесь!
+            Огромный выбор товаров для ремонта и строительства не оставит равнодушными любителей сэкномить на гастарбайтерах.
+          </p>
+          <p>
+            Мы можем доставить ваш товар в самые отдаленные точки России!
+            Техномарт работает со многими транспортными компаниями:
+          </p>
+          <ul class="trans_companies">
+            <li>
+              Деловые линии
+            </li>
+            <li>
+              Автотрейдинг
+            </li>
+            <li>
+              ЖелДорЭкспедиция
+            </li>
+          </ul>
+          <a class="main_btn" href="#">Подробнее о компании</a>
         </div>
-        <div class="main_block">
-          <div class="company_contacts">
-            <h2>КОНТАКТЫ</h2>
-            <p>
-              Вы можете забрать товар сами,
-              заехав в наш офис:
-            </p>
-            <a href="#"><img src="img/map.png" alt="Карта" width="300" height="158"></a>
-            <a class="main_btn" href="#">Заблудились? Напишите нам!</a>
-          </div>
+      </div>
+      <div class="main_block">
+        <div class="company_contacts">
+          <h2>КОНТАКТЫ</h2>
+          <p>
+            Вы можете забрать товар сами,
+            заехав в наш офис:
+          </p>
+          <a href="#"><img src="img/map.png" alt="Карта" width="300" height="158"></a>
+          <a class="main_btn" href="#">Заблудились? Напишите нам!</a>
         </div>
       </section>
     </main>
     <footer>
-        <div class="up_footer">
-          <div class="container">
-            <div class="about">
-              <a href="#"><img src="img/logo.png" width="220" height="47" alt="Техномарт"></a>
-              <p>
-                г. Санкт-Петербург, ул. Б.
-                Конюшенная, д. 19/8
-              </p>
-            </div>
-            <nav class="footer_nav">
-              <ul>
-                <li>
-                  <a href="#">Компания</a>
-                </li>
-                <li>
-                  <a href="#">Новости</a>
-                </li>
-                <li>
-                  <a href="#">Каталог</a>
-                </li>
-                <li>
-                  <a href="#">Доставка</a>
-                </li>
-                <li>
-                  <a href="#">Контакты</a>
-                </li>
-              </ul>
-            </nav>
-            <nav class="catalog_nav">
-              <ul>
-                <li>
-                  <a href="#">Материалы</a>
-                </li>
-                <li>
-                  <a href="#">Техника</a>
-                </li>
-                <li>
-                  <a href="#">Инструмент</a>
-                </li>
-                <li>
-                  <a href="#">Спецпредложения</a>
-                </li>
-              </ul>
-            </nav>
+      <div class="up_footer">
+        <div class="container">
+          <div class="about">
+            <a href="#"><img src="img/logo.png" width="220" height="47" alt="Техномарт"></a>
+            <p>
+              г. Санкт-Петербург, ул. Б.
+              Конюшенная, д. 19/8
+            </p>
+          </div>
+          <div class="footer_nav">
+            <ul>
+              <li>
+                <a href="#">Компания</a>
+              </li>
+              <li>
+                <a href="#">Новости</a>
+              </li>
+              <li>
+                <a href="catalog.html">Каталог</a>
+              </li>
+              <li>
+                <a href="#">Доставка</a>
+              </li>
+              <li>
+                <a href="#">Контакты</a>
+              </li>
+            </ul>
+          </div>
+          <div class="catalog_nav">
+            <ul>
+              <li>
+                <a href="#">Материалы</a>
+              </li>
+              <li>
+                <a href="#">Техника</a>
+              </li>
+              <li>
+                <a href="#">Инструмент</a>
+              </li>
+              <li>
+                <a href="#">Спецпредложения</a>
+              </li>
+            </ul>
           </div>
         </div>
-        <div class="bottom_footer">
-          <div class="container">
-            <div class="footer_copyright">
-              <p>
-                © 2010–2017 Компания «Техномарт»
-                Все права защищены
-              </p>
-            </div>
-            <div class="footer_social">
-              <a class="social_btn social_btn_vk" href="#">Вконтакте</a>
-              <a class="social_btn social_btn_fb" href="#">Фейсбук</a>
-              <a class="social_btn social_btn_inst" href="#">Инстаграм</a>
-            </div>
-            <div class="footer_contacts">
-              <p>
-                Обратная связь:
-                <a href="#">mail@htmlacademy.ru</a>
-              </p>
-              <p>
-                Разработано —
-                <a href="#">htmlacademy.ru</a>
-              </p>
-            </div>
+      </div>
+      <div class="bottom_footer">
+        <div class="container">
+          <div class="footer_copyright">
+            <p>
+              © 2010–2017 Компания «Техномарт»
+              Все права защищены
+            </p>
+          </div>
+          <div class="footer_social">
+            <a class="social_btn social_btn_vk" href="#">Вконтакте</a>
+            <a class="social_btn social_btn_fb" href="#">Фейсбук</a>
+            <a class="social_btn social_btn_inst" href="#">Инстаграм</a>
+          </div>
+          <div class="footer_contacts">
+            <p>
+              Обратная связь:
+              <a href="#">mail@htmlacademy.ru</a>
+            </p>
+            <p>
+              Разработано —
+              <a href="#">htmlacademy.ru</a>
+            </p>
           </div>
         </div>
+      </div>
     </footer>
   </body>
 </html>
