--- a/catalog.html
+++ b/catalog.html
@@ -82,20 +82,22 @@
       <div class="breadcrumbs">
         <ul>
           <li>
-            <img src="img/brcr_home.png" width="15" height="12">
+            <a href="#"><img src="img/brcr_home.png" width="15" height="12"></a>
           </li>
           <li>
-            КАТАЛОГ
+            <a href="#">КАТАЛОГ</a>
           </li>
           <li>
-            ИНСТРУМЕНТ
+            <a href="#">ИНСТРУМЕНТ</a>
           </li>
           <li>
-            ПЕРФОРАТОРЫ
+            <a href="#">ПЕРФОРАТОРЫ</a>ПЕРФОРАТОРЫ
           </li>
         </ul>
       </div>
-      <h1>ПЕРФОРАТОРЫ</h1>
+      <div class="catalog_title">
+        <h1>ПЕРФОРАТОРЫ</h1>
+      </div>
       <div class="aside_catalog">
         <form class="aside_catalog_form" action="index.html" method="post">
           <span class="aside_catalog_name">ФИЛЬТР</span>
@@ -136,10 +138,10 @@
           </ul>
           <ul class="sort_arrows">
             <li>
-              <img src="img/icon-up-dir.png" width="11" height="10">
+              <a href="#"><img src="img/icon-up-dir.png" width="11" height="10"></a>
             </li>
             <li>
-              <img src="img/icon-down-dir.png" width="11" height="10">
+              <a href="#"><img src="img/icon-down-dir.png" width="11" height="10"></a>
             </li>
           </ul>
           <article class="products_item">
