--- a/catalog.html
+++ b/catalog.html
@@ -91,7 +91,7 @@
             <a href="#">ИНСТРУМЕНТ</a>
           </li>
           <li>
-            <a href="#">ПЕРФОРАТОРЫ</a>ПЕРФОРАТОРЫ
+            <a href="#">ПЕРФОРАТОРЫ</a>
           </li>
         </ul>
       </div>
