--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>HTML Academy: Техномарт</title>
+    <link rel="stylesheet" href="css/style.css">
   </head>
   <body>
     <header>
@@ -92,7 +93,7 @@
         </div>
         <div class="catalog_slider">
           <div class="catalog_slider_content">
-            <img src="img/photo-1.jpg" alt="" width="620" height="266" />
+            <img src="img/catalog_slider_photo_1.jpg" alt="" width="620" height="266" />
           </div>
           <a class="main_btn" href="#">ОТКРЫТЬ КАТАЛОГ</a>
         </div>
@@ -105,7 +106,7 @@
         <div class="popular">
           <article class="products_item">
             <a href="#">
-              <img src="img/prod_1.png" width="180" height="160" alt="" />
+              <img src="img/BOSCH-BFG-9000.jpg" width="180" height="160" alt="" />
               <h1>Перфоратор BOSCH BFG 9000</h1>
               <span class="products_price">25500 Р</span>
               <span class="products_old_price">32500 Р</span>
@@ -113,7 +114,7 @@
           </article>
           <article class="products_item">
             <a href="#">
-              <img src="img/prod_2.png" width="180" height="160" alt="" />
+              <img src="img/BOSCH-BFG-3000.jpg" width="180" height="160" alt="" />
               <h1>Перфоратор BOSCH BFG 3000</h1>
               <span class="products_price">15500 Р</span>
               <span class="products_old_price">22500 Р</span>
@@ -121,7 +122,7 @@
           </article>
           <article class="products_item">
             <a href="#">
-              <img src="img/prod_3.png" width="180" height="160" alt="" />
+              <img src="img/BOSCH-BFG-6000.jpg" width="180" height="160" alt="" />
               <h1>Перфоратор BOSCH BFG 6000</h1>
               <span class="products_price">30500 Р</span>
               <span class="products_old_price">25500 Р</span>
@@ -129,7 +130,7 @@
           </article>
           <article class="products_item">
             <a href="#">
-              <img src="img/prod_4.png" width="180" height="160" alt="" />
+              <img src="img/BOSCH-BFG-2000.jpg" width="180" height="160" alt="" />
               <h1>Перфоратор BOSCH BFG 2000</h1>
               <span class="products_price">12500 Р</span>
             </a>
@@ -143,28 +144,28 @@
       <section class="manufacters">
         <div class="popular">
           <a class="manufacters_item" href="#">
-            <img src="img/mfc_1.png" alt="" width="200" height="73"/>
+            <img src="img/bosch.jpg" alt="" width="218" height="143"/>
           </a>
           <a class="manufacters_item" href="#">
-            <img src="img/mfc_2.png" alt="" width="200" height="73"/>
+            <img src="img/makita.jpg" alt="" width="218" height="143"/>
           </a>
           <a class="manufacters_item" href="#">
-            <img src="img/mfc_3.png" alt="" width="200" height="73"/>
+            <img src="img/dewalt.jpg" alt="" width="218" height="143"/>
           </a>
           <a class="manufacters_item" href="#">
-            <img src="img/mfc_4.png" alt="" width="200" height="73"/>
+            <img src="img/interskol.jpg" alt="" width="218" height="143"/>
           </a>
           <a class="manufacters_item" href="#">
-            <img src="img/mfc_5.png" alt="" width="200" height="73"/>
+            <img src="img/hitachi.jpg" alt="" width="218" height="143"/>
           </a>
           <a class="manufacters_item" href="#">
-            <img src="img/mfc_6.png" alt="" width="200" height="73"/>
+            <img src="img/lg.jpg" alt="" width="218" height="143"/>
           </a>
           <a class="manufacters_item" href="#">
-            <img src="img/mfc_7.png" alt="" width="200" height="73"/>
+            <img src="img/aeg.jpg" alt="" width="218" height="143"/>
           </a>
           <a class="manufacters_item" href="#">
-            <img src="img/mfc_8.png" alt="" width="200" height="73"/>
+            <img src="img/metabo.jpg" alt="" width="218" height="143"/>
           </a>
         </div>
       </section>
@@ -195,7 +196,7 @@
                 Ведь мы неплохо заработаем,
                 поднимая его на ваш этаж!
               </p>
-              <img src="img/deliver.png" width="468" height="261" alt="" />
+              <img src="img/services_deliver.png" width="468" height="261" alt="" />
             </div>
             <div class="services_slider_content">
               <span class="services_name">ГАРАНТИЯ</span>
@@ -205,7 +206,7 @@
                 вы всегда можете быть уверены в нашей гарантии. Мы обменяем сгоревший товар на новый.
                 Дом уж восстановите как-нибудь сами.
               </p>
-              <img src="img/deliver.png" width="468" height="261" alt="" />
+              <img src="img/services_guarantee.png" width="389" height="283" alt="" />
             </div>
             <div class="services_slider_content">
               <span class="services_name">КРЕДИТ</span>
@@ -214,7 +215,7 @@
                 Кредитные консультанты придут вам на помощь.
               </p>
               <a class="main_btn" href="#">ОТПРАВИТЬ ЗАЯВКУ</a>
-              <img src="img/deliver.png" width="468" height="261" alt="" />
+              <img src="img/services_credit.png" width="465" height="285" alt="" />
             </div>
           </div>
         </div>
@@ -251,7 +252,7 @@
             Вы можете забрать товар сами,
             заехав в наш офис:
           </p>
-          <a href="#"><img src="img/map.png" alt="Карта" width="300" height="158"></a>
+          <a href="#"><img src="img/map.jpg" alt="Карта" width="300" height="158"></a>
           <a class="main_btn" href="#">Заблудились? Напишите нам!</a>
         </div>
       </section>
