--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
       </div>
       <div class="bottom_header">
         <div class="container">
-          <div class="user_block">
+          <div class="user_block clearfix">
             <div class="info">
               <p>
                 Интернет-магазин
@@ -71,7 +71,7 @@
       </div>
     </header>
     <main class="container">
-      <section class="catalog">
+      <section class="catalog clearfix">
         <div class="catalog_item materials">
           <h2>Материалы</h2>
           <a class="item_btn" href="#">НА ЛЮБОЙ ВКУС</a>
@@ -84,6 +84,12 @@
           <h2>Техника</h2>
           <a class="item_btn" href="#">ДЛЯ СТРОЙКИ</a>
         </div>
+        <div class="catalog_slider">
+          <div class="catalog_slider_content">
+            <img src="img/catalog_slider_photo_1.jpg" alt="" width="620" height="266" />
+          </div>
+          <a class="main_btn" href="#">ОТКРЫТЬ КАТАЛОГ</a>
+        </div>
         <div class="catalog_item discount">
           <h2>Скидки 50%</h2>
           <a class="item_btn" href="#">НА 350 ТОВАРОВ</a>
@@ -92,19 +98,13 @@
           <h2>Доставка</h2>
           <a class="item_btn" href="#">БЕСПЛАТНО</a>
         </div>
-        <div class="catalog_slider">
-          <div class="catalog_slider_content">
-            <img src="img/catalog_slider_photo_1.jpg" alt="" width="620" height="266" />
-          </div>
-          <a class="main_btn" href="#">ОТКРЫТЬ КАТАЛОГ</a>
-        </div>
       </section>
       <section class="title">
         <h2>ПОПУЛЯРНЫЕ ТОВАРЫ</h2>
         <a class="main_btn" href="#">ВСЕ ПОПУЛЯРНЫЕ ТОВАРЫ</a>
       </section>
       <section class="products">
-        <div class="popular">
+        <div class="popular clearfix">
           <article class="products_item">
             <a href="#">
               <img src="img/BOSCH-BFG-9000.jpg" width="180" height="160" alt="" />
@@ -143,7 +143,7 @@
         <a class="main_btn" href="#">ВСЕ ПРОИЗВОДИТЕЛИ</a>
       </section>
       <section class="manufacters">
-        <div class="popular">
+        <div class="popular clearfix">
           <a class="manufacters_item" href="#">
             <img src="img/bosch.jpg" alt="" width="218" height="143"/>
           </a>
@@ -222,45 +222,45 @@
         </div>
       </section>
       <section class="company">
-        <div class="company_about">
-          <h2>КОМАНИЯ "ТЕХНОМАРТ"</h2>
-          <p>
-            Настоящий мужской шоппинг начинается здесь!
-            Огромный выбор товаров для ремонта и строительства не оставит равнодушными любителей сэкномить на гастарбайтерах.
-          </p>
-          <p>
-            Мы можем доставить ваш товар в самые отдаленные точки России!
-            Техномарт работает со многими транспортными компаниями:
-          </p>
-          <ul class="trans_companies">
-            <li>
-              Деловые линии
-            </li>
-            <li>
-              Автотрейдинг
-            </li>
-            <li>
-              ЖелДорЭкспедиция
-            </li>
-          </ul>
-          <a class="main_btn" href="#">Подробнее о компании</a>
-        </div>
-      </div>
-      <div class="main_block">
-        <div class="company_contacts">
-          <h2>КОНТАКТЫ</h2>
-          <p>
-            Вы можете забрать товар сами,
-            заехав в наш офис:
-          </p>
-          <a href="#"><img src="img/map.jpg" alt="Карта" width="300" height="158"></a>
-          <a class="main_btn" href="#">Заблудились? Напишите нам!</a>
+        <div class="main_block clearfix">
+          <div class="company_about">
+            <h2>КОМПАНИЯ "ТЕХНОМАРТ"</h2>
+            <p>
+              Настоящий мужской шоппинг начинается здесь!
+              Огромный выбор товаров для ремонта и строительства не оставит равнодушными любителей сэкномить на гастарбайтерах.
+            </p>
+            <p>
+              Мы можем доставить ваш товар в самые отдаленные точки России!
+              Техномарт работает со многими транспортными компаниями:
+            </p>
+            <ul class="trans_companies">
+              <li>
+                Деловые линии
+              </li>
+              <li>
+                Автотрейдинг
+              </li>
+              <li>
+                ЖелДорЭкспедиция
+              </li>
+            </ul>
+            <a class="main_btn" href="#">Подробнее о компании</a>
+          </div>
+          <div class="company_contacts">
+            <h2>КОНТАКТЫ</h2>
+            <p>
+              Вы можете забрать товар сами,
+              заехав в наш офис:
+            </p>
+            <a href="#"><img src="img/map.jpg" alt="Карта" width="300" height="158"></a>
+            <a class="main_btn" href="#">Заблудились? Напишите нам!</a>
+          </div>
         </div>
       </section>
     </main>
     <footer>
       <div class="up_footer">
-        <div class="container">
+        <div class="container clearfix">
           <div class="about">
             <a href="#"><img src="img/logo.png" width="220" height="47" alt="Техномарт"></a>
             <p>
@@ -306,7 +306,7 @@
         </div>
       </div>
       <div class="bottom_footer">
-        <div class="container">
+        <div class="container clearfix">
           <div class="footer_copyright">
             <p>
               © 2010–2017 Компания «Техномарт»
