Каталог на главной
исправил каталог на главной

--- a/index.html
+++ b/index.html
@@ -73,32 +73,36 @@
     <main>
       <div class="container">
         <section class="catalog">
-          <div class="catalog_item materials">
-            <h2>Материалы</h2>
-            <a class="item_btn" href="#">НА ЛЮБОЙ ВКУС</a>
-          </div>
-          <div class="catalog_item tools">
-            <h2>Инструмент</h2>
-            <a class="item_btn" href="#">НА ВСЕ СЛУЧАИ</a>
-          </div>
-          <div class="catalog_item tech">
-            <h2>Техника</h2>
-            <a class="item_btn" href="#">ДЛЯ СТРОЙКИ</a>
-          </div>
-          <div class="catalog_slider">
-            <div class="catalog_slider_text">
-              <span>Перфораторы</span>
-              Настоящие мужские игрушки
+          <div class="catalog_left">
+            <div class="catalog_item materials">
+              <h2>Материалы</h2>
+              <a class="item_btn" href="#">НА ЛЮБОЙ ВКУС</a>
             </div>
-            <a class="main_btn" href="#">ОТКРЫТЬ КАТАЛОГ</a>
+            <div class="catalog_item tools">
+              <h2>Инструмент</h2>
+              <a class="item_btn" href="#">НА ВСЕ СЛУЧАИ</a>
+            </div>
+            <div class="catalog_slider">
+              <div class="catalog_slider_text">
+                <span>Перфораторы</span>
+                Настоящие мужские игрушки
+              </div>
+              <a class="main_btn" href="#">ОТКРЫТЬ КАТАЛОГ</a>
+            </div>
           </div>
-          <div class="catalog_item discount">
-            <h2>Скидки 50%</h2>
-            <a class="item_btn" href="#">НА 350 ТОВАРОВ</a>
-          </div>
-          <div class="catalog_item delivery">
-            <h2>Доставка</h2>
-            <a class="item_btn" href="#">БЕСПЛАТНО</a>
+          <div class="catalog_right">
+            <div class="catalog_item tech">
+              <h2>Техника</h2>
+              <a class="item_btn" href="#">ДЛЯ СТРОЙКИ</a>
+            </div>
+            <div class="catalog_item discount">
+              <h2>Скидки 50%</h2>
+              <a class="item_btn" href="#">НА 350 ТОВАРОВ</a>
+            </div>
+            <div class="catalog_item delivery">
+              <h2>Доставка</h2>
+              <a class="item_btn" href="#">БЕСПЛАТНО</a>
+            </div>
           </div>
         </section>
         <section class="title">
